[package]
name = "vproxy"
version = "2.0.77"
authors = ["gngppz@gmail.com"]
description = "A high-performance HTTP/HTTPS/SOCKS5 proxy server"
repository = "https://github.com/0x676e67/vproxy"
keywords = ["http", "https", "socks5", "proxy", "server"]
readme = "README.md"
license = "GPL-3.0"
edition = "2024"
rust-version = "1.85"

[dependencies]
base64 = "0.22.0"
cidr = "0.3.0"
thiserror = "2"
tokio = { version = "1", features = [
    "net",
    "rt-multi-thread",
    "macros",
    "io-util",
] }
rand = "0.9.0"
clap = { version = "4.5.31", features = ["derive", "env"] }
self_update = { version = "0.42.0", default-features = false, features = [
    "rustls",
    "archive-tar",
    "compression-flate2",
] }
fxhash = "0.2.1"

# log
tracing = "0.1.40"
tracing-subscriber = { version = "0.3.19", features = ["env-filter"] }

# http
http = "1"
hyper = { version = "1.6.0", features = ["http1", "server"] }
hyper-util = { version = "0.1.10", features = ["full"] }
http-body-util = "0.1"

# rustls
rustls-pki-types = { version = "1.11.0" }
rustls-pemfile = { version = "2.2.0" }
tokio-rustls = { version = "0.26.2", default-features = false, features = ["tls12"] }
rcgen = "0.13.0"

# socks5
bytes = "1.10.1"
pin-project-lite = "0.2.16"
tokio-stream = "0.1.0"
percent-encoding = "2.3.1"

# memory allocator
tcmalloc = { version = "0.3.0", optional = true }
snmalloc-rs = { version = "0.3.8", optional = true }
rpmalloc = { version = "0.2.2", optional = true }
jemallocator = { package = "tikv-jemallocator", version = "0.6", optional = true }
mimalloc = { version = "0.1.39", default-features = false, optional = true }

[target.'cfg(target_os = "linux")'.dependencies]
sysctl = "0.6.0"
rtnetlink = "0.16"
netlink-packet-route = "0.22"
futures = "0.3.30"

[target.'cfg(target_family = "unix")'.dependencies]
daemonize = "0.5.0"
nix = { version = "0.29.0", features = ["user", "signal"] }
sysinfo = { version = "0.34", default-features = false, features = ["system"] }

[features]
default = ["mimalloc"]
jemalloc = ["jemallocator"]
tcmalloc = ["tcmalloc/bundled"]
snmalloc = ["snmalloc-rs"]
rpmalloc = ["dep:rpmalloc"]
mimalloc = ["dep:mimalloc"]

[profile.release]
lto = true
opt-level = 3
codegen-units = 1
strip = true
panic = "abort"
