[package]
name = "vproxy"
version = "2.4.3"
authors = ["gngppz@gmail.com"]
description = "A high-performance HTTP/HTTPS/SOCKS5 proxy server"
repository = "https://github.com/0x676e67/vproxy"
categories = ["network-programming", "command-line-utilities"]
keywords = ["http", "https", "socks5", "proxy", "server"]
readme = "README.md"
license = "GPL-3.0"
edition = "2024"
rust-version = "1.85"

[dependencies]
base64 = "0.22.0"
cidr = "0.3.0"
thiserror = "2.0.16"
tokio = { version = "1.47.1", features = [
    "net",
    "rt-multi-thread",
    "macros",
    "io-util",
    "signal",
] }
clap = { version = "4.5.48", features = ["derive", "env"] }
self_update = { version = "0.42.0", default-features = false, features = [
    "rustls",
    "archive-tar",
    "compression-flate2",
] }
fxhash = "0.2.1"
futures-util = { version = "0.3.30", default-features = false }

# tracing
tracing = "0.1.40"
tracing-subscriber = { version = "0.3.20", features = ["env-filter"] }

# http
http = "1.3.1"
hyper = { version = "1.7.0", features = ["http1", "server"] }
hyper-util = { version = "0.1.17", features = ["full"] }
http-body-util = "0.1.3"
rustls-pki-types = { version = "1.12.0" }
rustls-pemfile = { version = "2.2.0" }
tokio-rustls = { version = "0.26.3", default-features = false, features = [
    "tls12",
] }
rcgen = "0.14.5"

# socks5
bytes = "1.10.1"
smallvec = "1.15.0"
pin-project-lite = "0.2.16"
percent-encoding = "2.3.2"

# memory allocator
tcmalloc = { version = "0.3.0", optional = true }
snmalloc-rs = { version = "0.3.8", optional = true }
rpmalloc = { version = "0.2.2", optional = true }
jemallocator = { package = "tikv-jemallocator", version = "0.6", optional = true }
mimalloc = { version = "0.1.48", default-features = false, optional = true }

[target.'cfg(target_os = "linux")'.dependencies]
sysctl = "0.7.1"
rtnetlink = "0.18"
netlink-packet-route = "0.25.1"
futures = "0.3.30"

[target.'cfg(target_family = "unix")'.dependencies]
daemonize = "0.5.0"
nix = { version = "0.30.1", features = ["user", "signal"] }
sysinfo = { version = "0.37", default-features = false, features = ["system"] }

[features]
default = ["mimalloc"]
jemalloc = ["jemallocator"]
tcmalloc = ["tcmalloc/bundled"]
snmalloc = ["snmalloc-rs"]
rpmalloc = ["dep:rpmalloc"]
mimalloc = ["dep:mimalloc"]

[profile.release]
lto = true
opt-level = 3
codegen-units = 1
strip = true
panic = "abort"
